crates/swc_ecma_parser/tests/test262-error-references/fail/0d3b0899890c5f8e.js.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/test262-parser/fail/0d3b0899890c5f8e.js:1:12
  |
1 | class a {b(enum){}}
  |            ^^^^

